--- a/projet metro/Makefile
+++ b/projet metro/Makefile
@@ -1,12 +1,6 @@
-# Clément Caumes 21501810
-# Yassin Doudouh 21500127
-# 05 mai 2017
-# Projet Metro IN403
-
 # Makefile du projet Metro
 
 CFLAGS=-c -g -Wall
-SDL=`sdl-config --cflags` 
 
 run: compile
 	./metro
@@ -14,18 +8,17 @@ run: compile
 valgrind: 
 	valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes ./metro
 	
-compile: metro.o lire_ecrire.o graphe.o #affichage.o
-	gcc -Wall -o metro metro.o lire_ecrire.o graphe.o #affichage.o
+compile: metro.o lire_ecrire.o graphe.o 
+	gcc -Wall -o metro metro.o lire_ecrire.o graphe.o
 
-metro.o: metro.c graphe.h lire_ecrire.h types.h #affichage.h
-	gcc $(CFLAGS) $(SDL) metro.c
+metro.o: metro.c graphe.h lire_ecrire.h types.h 
+	gcc $(CFLAGS) metro.c
 	
-lire_ecrire.o: lire_ecrire.c lire_ecrire.h graphe.h types.h #affichage.h
-	gcc $(CFLAGS) $(SDL) lire_ecrire.c
+lire_ecrire.o: lire_ecrire.c lire_ecrire.h graphe.h types.h 
+	gcc $(CFLAGS) lire_ecrire.c
 	
-graphe.o: graphe.c graphe.h lire_ecrire.h types.h #affichage.h
-	gcc $(CFLAGS) $(SDL) graphe.c
-	
+graphe.o: graphe.c graphe.h lire_ecrire.h types.h 
+	gcc $(CFLAGS) graphe.c
 indent: 
 	indent -linux *.h
 	indent -linux *.c
@@ -37,4 +30,3 @@ clean:
 	rm -f metro.o
 	rm -f lire_ecrire.o
 	rm -f graphe.o
-	#rm -f affichage.o
